I have removed the vertical scroll bar from all of the pages and have instead set it up so that it only appears on the add classes page to prevent screen jumping when a tab is opened

--- a/src/Athena/Content/css/site.css
+++ b/src/Athena/Content/css/site.css
@@ -37,17 +37,17 @@
     overflow-y: hidden;
 }
 
-    .tabs-content.carousel .carousel-item {
-        width: 100%;
-        height: 550px;
-    }
+.tabs-content.carousel .carousel-item {
+    width: 100%;
+    height: 550px;
+}
 
 html, body {
     height: 100%;
 }
 
 html {
-    overflow-y: scroll;
+   
 }
 .body-content {
     padding-left: 15px;
@@ -97,7 +97,8 @@ main {
 
 #calendar {
     margin: 0 auto;
-    background-color:white
+    background-color:white;
+    padding:0px;  
 }
 
 .overlay {
